fix: content of popup cannot scroll when it is too long

--- a/packages/zarm/src/popup/style/component.scss
+++ b/packages/zarm/src/popup/style/component.scss
@@ -19,7 +19,6 @@
     overflow: auto;
     padding: 60px 0;
     -webkit-overflow-scrolling: touch;
-    pointer-events: none;
   }
 
   @include m(bottom) {
